crates/ty_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_Inconsistent_signatures.snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: overloads.md - Overloads - Invalid - Inconsistent signatures
mdtest path: crates/ty_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def func(x: int) -> int: ...
 5 | @overload
 6 | def func(x: str) -> str: ...
 7 | 
 8 | # error: [invalid-overload]
 9 | # error: [invalid-overload]
10 | def func(): ...
```

# Diagnostics

```
error: lint:invalid-overload: Overloaded implementation is not consistent with signature of overload 1 `(x: int) -> int`
  --> src/mdtest_snippet.py:10:5
   |
 8 | # error: [invalid-overload]
 9 | # error: [invalid-overload]
10 | def func(): ...
   |     ^^^^
   |
info: `lint:invalid-overload` is enabled by default

```

```
error: lint:invalid-overload: Overloaded implementation is not consistent with signature of overload 2 `(x: str) -> str`
  --> src/mdtest_snippet.py:10:5
   |
 8 | # error: [invalid-overload]
 9 | # error: [invalid-overload]
10 | def func(): ...
   |     ^^^^
   |
info: `lint:invalid-overload` is enabled by default

```
